chore: almost done with the pickup handler tests
